--- a/src/main/resources/fxml/GraphList/GraphBlockConfigUI.fxml
+++ b/src/main/resources/fxml/GraphList/GraphBlockConfigUI.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 <GridPane hgap="40.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0"
+          styleClass="grid-pane"
           xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
